Fix vertical alignment of footer link

--- a/src/main/resources/static/less/style.less
+++ b/src/main/resources/static/less/style.less
@@ -79,6 +79,7 @@ header {
 
 footer {
   height: 20px;
+  line-height: 20px;
   padding: 5px;
   border-top: 1px solid #CCCCCC;
   font-size: 0.8em;
